// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MDX COMPONENTS > renders Video wrapper correctly 1`] = `
<DocumentFragment>
  <figure
    class="my-10"
    data-figure-kind="video"
    data-tier="wide"
  >
    <div
      class="mx-auto max-w-wide"
    >
      <div
        class="border border-rule rounded-md overflow-hidden bg-bg-soft"
      >
        <div
          class="bg-bg-deep p-4"
        >
          <video
            class="block w-full h-auto"
            controls=""
            src="/clip.mp4"
          >
            <track
              kind="captions"
            />
          </video>
        </div>
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders a correctly 1`] = `
<DocumentFragment>
  <a
    class="underline font-bold scroll-my-14 dark:text-yellow-400 dark:hover:text-yellow-600 text-purple-600 hover:text-purple-800 duration-200"
    href="https://example.com"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders blockquote correctly 1`] = `
<DocumentFragment>
  <div
    class="mx-auto max-w-prose my-8"
  >
    <blockquote
      class="border-l-2 border-accent pl-6 py-2 font-serif italic text-xl leading-snug text-text-mute"
    >
      Blockquote
    </blockquote>
  </div>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders code correctly 1`] = `
<DocumentFragment>
  <code
    class="dark:bg-gray-800 text-sm p-1 rounded font-mono bg-gray-400 dark:text-white"
  >
    Strong
  </code>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders headings correctly 1`] = `
<DocumentFragment>
  <h1
    class="mx-auto max-w-prose text-5xl my-8"
    style="scroll-margin-top: 96px;"
  >
    Heading 1
  </h1>
  <h2
    class="group relative mx-auto max-w-prose font-serif font-semibold text-h2 text-text mt-12 mb-4"
    style="scroll-margin-top: 96px;"
  >
    Heading 2
  </h2>
  <h3
    class="group relative mx-auto max-w-prose font-serif font-semibold text-h3 text-text mt-8 mb-3"
    style="scroll-margin-top: 96px;"
  >
    Heading 3
  </h3>
  <h4
    class="mx-auto max-w-prose text-xl my-8"
    style="scroll-margin-top: 96px;"
  >
    Heading 4
  </h4>
  <h5
    class="mx-auto max-w-prose text-lg my-8"
    style="scroll-margin-top: 96px;"
  >
    Heading 5
  </h5>
  <h6
    class="mx-auto max-w-prose text-base my-8"
    style="scroll-margin-top: 96px;"
  >
    Heading 6
  </h6>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders hr correctly 1`] = `
<DocumentFragment>
  <hr
    class="mx-auto max-w-prose my-12 border-t border-rule"
  />
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders img through MDX mapping 1`] = `
<DocumentFragment>
  <figure
    class="my-10"
    data-figure-kind="image"
    data-tier="wide"
  >
    <div
      class="mx-auto max-w-wide"
    >
      <div
        class="border border-rule rounded-md overflow-hidden bg-bg-soft"
      >
        <div
          class="bg-bg-deep"
        >
          <img
            alt="Caption"
            height="300"
            sizes="(max-width: 768px) 100vw, (max-width: 1280px) 65vw, 78rem"
            src="/pic.png?width=400&height=300"
            style="display: block; width: 100%; height: auto;"
            width="400"
          />
        </div>
      </div>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders li correctly 1`] = `
<DocumentFragment>
  <li
    class="list-item"
  >
    List Item
  </li>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders nested list structure 1`] = `
<DocumentFragment>
  <ul
    class="mx-auto max-w-prose list-disc list-outside pl-8 my-4"
    id="topics"
  >
    <li
      class="list-item"
    >
      Alpha
    </li>
    <li
      class="list-item"
    >
      Beta
    </li>
  </ul>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders ol correctly 1`] = `
<DocumentFragment>
  <ol
    class="mx-auto max-w-prose list-decimal list-outside pl-8 my-4"
  >
    Ordered List
  </ol>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders paragraphs correctly 1`] = `
<DocumentFragment>
  <p
    class="mx-auto max-w-prose my-3"
  >
    Paragraph
  </p>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders sup correctly 1`] = `
<DocumentFragment>
  <sup
    style="scroll-margin-top: 96px;"
  >
    2
  </sup>
</DocumentFragment>
`;

exports[`MDX COMPONENTS > renders ul correctly 1`] = `
<DocumentFragment>
  <ul
    class="mx-auto max-w-prose list-disc list-outside pl-8 my-4"
  >
    Unordered List
  </ul>
</DocumentFragment>
`;
